standardized the /token endpoint by adding grant_type and b64 encoding
